Readability fixes for firebase error messages, padding for registration error

--- a/src/pages/RegistrationPage/components/OptionalInfo/OptionalInfo.css
+++ b/src/pages/RegistrationPage/components/OptionalInfo/OptionalInfo.css
@@ -55,5 +55,5 @@
 }
 
 #error-message {
-  color: red;
+  color: #ffa0a0;
 }
